modules/gdscript/tests/scripts/analyzer/errors/access_level_private_var_outside.gd
@private

class Foo:
    var a = 1

func test():
    print(Foo.new().a)
